<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".onboarding.second">


        <TextView
            android:id="@+id/txtSkip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="18dp"
            android:text="@string/Skip"
            android:textColor="@color/TextblueColor"
            android:textSize="18sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imgOnboarding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="84dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/onboardingimage"
            android:contentDescription="@string/all"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtSkip" />

        <TextView
            android:id="@+id/txtMaterial"
            android:layout_width="344sp"
            android:layout_height="75sp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="53dp"
            android:layout_marginEnd="16dp"
            android:text="@string/material"
            android:textAlignment="center"
            android:textColor="@color/TextblueColor"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgOnboarding" />

        <TextView
            android:id="@+id/txtMultimedia"
            android:layout_width="344sp"
            android:layout_height="67sp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:text="@string/findMaterials"
            android:textAlignment="center"
            android:textColor="@color/TextdarkColor"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtMaterial" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnNext"
            android:layout_width="160sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="108dp"
            android:layout_marginTop="87dp"
            android:layout_marginEnd="107dp"
            android:layout_marginBottom="52dp"
            android:background="@drawable/custom_button"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtMultimedia" />
    </androidx.constraintlayout.widget.ConstraintLayout>
